Closed
Bug 1323088
Opened 9 years ago
Closed 9 years ago
Firefox Nightly 53.0a1 (2016-12-11) crashes in [@ @0x0 | mozilla::gfx::VRControllerManagerOpenVR ... ] & [@ @0x0 | mozilla::gfx::VRManager ... ]
Categories
(Core :: Graphics, defect)
Tracking
()
VERIFIED
FIXED
mozilla53
| Tracking | Status | |
|---|---|---|
| firefox-esr45 | --- | unaffected |
| firefox50 | --- | unaffected |
| firefox51 | --- | unaffected |
| firefox52 | --- | unaffected |
| firefox53 | + | verified |
People
(Reporter: Virtual, Assigned: daoshengmu)
References
Details
(Keywords: crash, nightly-community, regression)
Crash Data
Attachments
(1 file)
[Tracking Requested - why for this release]: Regression
"Speedy" Regression window (mozilla-central)
Good:
https://ftp.mozilla.org/pub/firefox/nightly/2016/12/2016-12-10-03-02-06-mozilla-central/
Bad:
https://ftp.mozilla.org/pub/firefox/nightly/2016/12/2016-12-11-03-02-09-mozilla-central/
Pushlog:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=8404d26166a35406f46ff237ed132735c98882b2&tochange=c51e7406d7b2e2246a1ece0d8989282ca752039f
Probably caused by:
Bug 1313581 - [webvr] Support HTC Vive controller hand through the Gamepad API
Flags: needinfo?(dmu)
| Reporter | ||
Updated•9 years ago
|
Crash Signature: [@ @0x0 | mozilla::gfx::VRControllerManagerOpenVR::Init ]
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → dmu
Flags: needinfo?(dmu)
| Assignee | ||
Comment 2•9 years ago
|
||
This bug is because we check LoadOpenVRRuntime() at VRDisplayManagerOpenVR::Create(). We have to make sure the runtime is loaded successfully, then creating the controller manager.
Comment 3•9 years ago
|
||
Adding some signatures, there are Mac crashes as well.
Crash Signature: [@ @0x0 | mozilla::gfx::VRControllerManagerOpenVR::Init ] → [@ @0x0 | mozilla::gfx::VRControllerManagerOpenVR::Init ]
[@ @0x0 | mozilla::gfx::VRManager::Init]
[@ @0x0 | mozilla::gfx::VRManager::AddVRManagerParent]
OS: Windows → All
Hardware: x86_64 → All
Comment 4•9 years ago
|
||
Tracking 53+ as this is a new regression that is now the #2 top crash on nightly in the last few days.
Comment 5•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8818176 [details]
Bug 1323088 - OpenVR controller manager should not be created while loading runtime fail;
https://reviewboard.mozilla.org/r/98298/#review98714
Looks good, thanks!
Attachment #8818176 -
Flags: review?(kgilbert) → review+
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 6•9 years ago
|
||
(In reply to Marcia Knous [:marcia - use ni] from comment #4)
> Tracking 53+ as this is a new regression that is now the #2 top crash on
> nightly in the last few days.
Sorry about this. I believe this patch will resolve it. Let's land it ASAP.
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2dea832c2464
OpenVR controller manager should not be created while loading runtime fail; r=kip
Keywords: checkin-needed
Comment 8•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
| Reporter | ||
Updated•9 years ago
|
Has Regression Range: --- → yes
Has STR: --- → irrelevant
Summary: Firefox Nightly 53.0a1 (2016-12-11) crashes in [@ @0x0 | mozilla::gfx::VRControllerManagerOpenVR::Init ] → Firefox Nightly 53.0a1 (2016-12-11) crashes in [@ @0x0 | mozilla::gfx::VRControllerManagerOpenVR ... ] & [@ @0x0 | mozilla::gfx::VRManager ... ]
| Reporter | ||
Comment 9•9 years ago
|
||
No crashes since Firefox Nightly 53.0a1 (2016-12-15) build,
so I'm marking this bug as verified.
Status: RESOLVED → VERIFIED
| Reporter | ||
Updated•9 years ago
|
Keywords: nightly-community
| Reporter | ||
Updated•8 years ago
|
QA Contact: Virtual
| Reporter | ||
Updated•7 years ago
|
Keywords: crashreportid
You need to log in
before you can comment on or make changes to this bug.
Description
•