Bug 1323088 - OpenVR controller manager should not be created while loading runtime fail; r=kip

MozReview-Commit-ID: 6gM9r1Y4MkG